1. 맵 설정 화면: 말풍선 안내 이미지 교체 2. 신호등 아이콘 교체(8개 전부다 새로 업데이트 받아주세요.) 3. 구역, 지점, 카메라, 레이더, 도로 목록 화면 : 검색 입력박스 추가 4. 통계 상세, 통계 비교 화면 스크롤 안생기게 수정 5. (공통) 목록화면 테이블 th요소안에 체크박스가 없어도 동일하게 높이    유지 할 수 있도록 수정

--- a/base/html/camera_list.html
+++ b/base/html/camera_list.html
@@ -52,6 +52,9 @@
                   </select>
                 </div>
                 <!-- //selectbox-wrap -->
+                <div class="ui input md label-none">
+                  <input type="text" />
+                </div>
                 <button type="button" class="btn-data-search">검색</button>
               </div>
               <!-- //inner -->
