--- a/base/html/set_point.html
+++ b/base/html/set_point.html
@@ -51,6 +51,9 @@
                   </select>
                 </div>
                 <!-- //selectbox-wrap -->
+                <div class="ui input md label-none">
+                  <input type="text" placeholder="지점 ID or 지점명" />
+                </div>
                 <button type="button" class="btn-data-search">검색</button>
               </div>
               <!-- //inner -->
