--- a/base/html/radar_list.html
+++ b/base/html/radar_list.html
@@ -52,6 +52,9 @@
                   </select>
                 </div>
                 <!-- //selectbox-wrap -->
+                <div class="ui input md label-none">
+                  <input type="text" />
+                </div>
                 <button type="button" class="btn-data-search">검색</button>
               </div>
               <!-- //inner -->
