--- a/base/html/check_equipment_list.html
+++ b/base/html/check_equipment_list.html
@@ -28,7 +28,7 @@
               <i class="right angle icon divider"></i>
               <span class="section">시스템 관리</span>
               <i class="right angle icon divider"></i>
-              <div class="active section">장비 상태 조회</div>
+              <div class="section">장비 상태 조회</div>
             </div>
             <!-- //breadcrumb -->
 
