--- a/base/html/crossroads_flow.html
+++ b/base/html/crossroads_flow.html
@@ -29,7 +29,7 @@
               <i class="right angle icon divider"></i>
               <span class="section">통계</span>
               <i class="right angle icon divider"></i>
-              <div class="active section">교차로 유출입 교통량</div>
+              <div class="section">교차로 유출입 교통량</div>
             </div>
             <!-- //breadcrumb -->
             <div class="crossroads-flow-container">
