--- a/base/html/crossroads_roi_set_list.html
+++ b/base/html/crossroads_roi_set_list.html
@@ -28,7 +28,7 @@
               <i class="right angle icon divider"></i>
               <span class="section">시스템 설정</span>
               <i class="right angle icon divider"></i>
-              <div class="active section">영상인식 ROI 설정</div>
+              <div class="section">영상인식 ROI 설정</div>
             </div>
             <!-- //breadcrumb -->
 
