--- a/base/html/crossroads_stats_primitive.html
+++ b/base/html/crossroads_stats_primitive.html
@@ -37,7 +37,7 @@
               <i class="right angle icon divider"></i>
               <span class="section">통계</span>
               <i class="right angle icon divider"></i>
-              <div class="active section">교차로 원시 이력</div>
+              <div class="section">교차로 원시 이력</div>
             </div>
             <!-- //breadcrumb -->
             <div class="stats-container primitive">
