--- a/base/html/linkage_list.html
+++ b/base/html/linkage_list.html
@@ -28,7 +28,7 @@
               <i class="right angle icon divider"></i>
               <span class="section">시스템 관리</span>
               <i class="right angle icon divider"></i>
-              <div class="active section">연동제어 관리</div>
+              <div class="section">연동제어 관리</div>
             </div>
             <!-- //breadcrumb -->
 
