--- a/base/html/outbreak_record_list.html
+++ b/base/html/outbreak_record_list.html
@@ -29,7 +29,7 @@
               <i class="right angle icon divider"></i>
               <span class="section">돌발</span>
               <i class="right angle icon divider"></i>
-              <div class="active section">돌발 발생 이력</div>
+              <div class="section">돌발 발생 이력</div>
             </div>
             <!-- //breadcrumb -->
             <div class="outbreak-record">
