--- a/base/html/bj_list.html
+++ b/base/html/bj_list.html
@@ -26,7 +26,7 @@
               <i class="right angle icon divider"></i>
               <span class="section">설정</span>
               <i class="right angle icon divider"></i>
-              <div class="active section">배치 작업</div>
+              <div class="section">배치 작업</div>
             </div>
             <!-- //breadcrumb -->
 
