--- a/base/html/crossroads_stats_comparison.html
+++ b/base/html/crossroads_stats_comparison.html
@@ -37,7 +37,7 @@
               <i class="right angle icon divider"></i>
               <span class="section">통계</span>
               <i class="right angle icon divider"></i>
-              <div class="active section">교차로 비교 통계</div>
+              <div class="section">교차로 비교 통계</div>
             </div>
             <!-- //breadcrumb -->
             <div class="stats-container">
