--- a/base/html/crossroads_stats_comparison2.html
+++ b/base/html/crossroads_stats_comparison2.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>교차로 상세 통계</title>
+    <title>교차로 비교 통계</title>
     <script src="/base/js/lib/jquery-3.5.1.min.js"></script>
     <script src="/base/js/lib/jquery-ui.min.js"></script>
     <script src="/base/js/lib/semantic.min.js"></script>
@@ -37,30 +37,12 @@
               <i class="right angle icon divider"></i>
               <span class="section">통계</span>
               <i class="right angle icon divider"></i>
-              <div class="section">교차로 상세 통계</div>
+              <div class="section">교차로 비교 통계</div>
             </div>
             <!-- //breadcrumb -->
             <div class="stats-container">
               <section class="filter-grouop">
                 <div class="inner">
-                  <div class="selectbox-wrap primary label-none">
-                    <select>
-                      <option value="">구역</option>
-                      <option value="">아이템1</option>
-                      <option value="">아이템2</option>
-                      <option value="">아이템3</option>
-                    </select>
-                  </div>
-                  <!-- //selectbox-wrap -->
-                  <div class="selectbox-wrap primary label-none">
-                    <select>
-                      <option value="">지점</option>
-                      <option value="">아이템1</option>
-                      <option value="">아이템2</option>
-                      <option value="">아이템3</option>
-                    </select>
-                  </div>
-                  <!-- //selectbox-wrap -->
                   <div class="selectbox-wrap primary label-none">
                     <select>
                       <option value="">분석 유형</option>
@@ -99,13 +81,15 @@
                   </div>
                   <!-- //checkbox -->
 
+                  <button class="btn-data-search">비교 지점 선택</button>
                   <button class="btn-data-search">검색</button>
                 </div>
                 <!-- //inner -->
+                <p class="branch-result">선택 지점 : 지점명1, 지점명2, 지점명3, 지점명4</p>
               </section>
               <!-- //filter-grouop -->
               <section class="divide-none">
-                <h2>범지기마을 도로 별 교통량</h2>
+                <h2>지점 비교</h2>
                 <div class="chart-container">
                   <!-- 차트 크기 1746(px) x 206(px) -->
                   <img
@@ -116,16 +100,17 @@
                 </div>
               </section>
               <!-- //divide-none -->
-              <section class="divide-4">
-                <h2>범지기마을 차로 별 교통량</h2>
+
+              <!-- 차트가 2개일 경우 divide-2 클래스 사용 -->
+              <section class="divide-2 title-none">
                 <ul>
                   <li>
                     <div class="chart-wrap">
-                      <h3>아름동 행정복지센터 방면</h3>
+                      <h3>지점명 1</h3>
                       <div class="chart-container">
-                        <!-- 차트 크기 802(px) x 137(px) -->
+                        <!-- 차트 크기 802(px) x 352(px) -->
                         <img
-                          src="https://www.dummyimage.com/802x137/f9f9f9/000.png&amp;text=Chart+Area"
+                          src="https://www.dummyimage.com/802x352/f9f9f9/000.png&amp;text=Chart+Area"
                           alt="퍼블리싱 확인용 더미 이미지"
                           class="dummy-img"
                         />
@@ -133,89 +118,11 @@
                     </div>
                     <!-- //chart-wrap -->
                     <div class="chart-wrap">
-                      <h3>아름초등학교 방면</h3>
+                      <h3>지점명 2</h3>
                       <div class="chart-container">
-                        <!-- 차트 크기 802(px) x 137(px) -->
+                        <!-- 차트 크기 802(px) x 352(px) -->
                         <img
-                          src="https://www.dummyimage.com/802x137/f9f9f9/000.png&amp;text=Chart+Area"
-                          alt="퍼블리싱 확인용 더미 이미지"
-                          class="dummy-img"
-                        />
-                      </div>
-                    </div>
-                    <!-- //chart-wrap -->
-                    <div class="chart-wrap">
-                      <h3>종촌동 방면</h3>
-                      <div class="chart-container">
-                        <!-- 차트 크기 802(px) x 137(px) -->
-                        <img
-                          src="https://www.dummyimage.com/802x137/f9f9f9/000.png&amp;text=Chart+Area"
-                          alt="퍼블리싱 확인용 더미 이미지"
-                          class="dummy-img"
-                        />
-                      </div>
-                    </div>
-                    <!-- //chart-wrap -->
-                    <div class="chart-wrap">
-                      <h3>도담동 방면</h3>
-                      <div class="chart-container">
-                        <!-- 차트 크기 802(px) x 137(px) -->
-                        <img
-                          src="https://www.dummyimage.com/802x137/f9f9f9/000.png&amp;text=Chart+Area"
-                          alt="퍼블리싱 확인용 더미 이미지"
-                          class="dummy-img"
-                        />
-                      </div>
-                    </div>
-                    <!-- //chart-wrap -->
-                  </li>
-                </ul>
-                <!-- 230825 차종 별 교통량 영역 구분 및 분리 -->
-                <h2>범지기마을 차종 별 교통량</h2>
-                <ul>
-                  <li>
-                    <div class="chart-wrap">
-                      <h3>아름동 행정복지센터 방면</h3>
-                      <div class="chart-container">
-                        <!-- 차트 크기 802(px) x 137(px) -->
-                        <img
-                          src="https://www.dummyimage.com/802x137/f9f9f9/000.png&amp;text=Chart+Area"
-                          alt="퍼블리싱 확인용 더미 이미지"
-                          class="dummy-img"
-                        />
-                      </div>
-                    </div>
-                    <!-- //chart-wrap -->
-                    <div class="chart-wrap">
-                      <h3>아름초등학교 방면</h3>
-                      <div class="chart-container">
-                        <!-- 차트 크기 802(px) x 137(px) -->
-                        <img
-                          src="https://www.dummyimage.com/802x137/f9f9f9/000.png&amp;text=Chart+Area"
-                          alt="퍼블리싱 확인용 더미 이미지"
-                          class="dummy-img"
-                        />
-                      </div>
-                    </div>
-                    <!-- //chart-wrap -->
-                    <div class="chart-wrap">
-                      <h3>종촌동 방면</h3>
-                      <div class="chart-container">
-                        <!-- 차트 크기 802(px) x 137(px) -->
-                        <img
-                          src="https://www.dummyimage.com/802x137/f9f9f9/000.png&amp;text=Chart+Area"
-                          alt="퍼블리싱 확인용 더미 이미지"
-                          class="dummy-img"
-                        />
-                      </div>
-                    </div>
-                    <!-- //chart-wrap -->
-                    <div class="chart-wrap">
-                      <h3>도담동 방면</h3>
-                      <div class="chart-container">
-                        <!-- 차트 크기 802(px) x 137(px) -->
-                        <img
-                          src="https://www.dummyimage.com/802x137/f9f9f9/000.png&amp;text=Chart+Area"
+                          src="https://www.dummyimage.com/802x352/f9f9f9/000.png&amp;text=Chart+Area"
                           alt="퍼블리싱 확인용 더미 이미지"
                           class="dummy-img"
                         />
