--- a/base/html/crossroads_stats_main.html
+++ b/base/html/crossroads_stats_main.html
@@ -37,7 +37,7 @@
               <i class="right angle icon divider"></i>
               <span class="section">통계</span>
               <i class="right angle icon divider"></i>
-              <div class="active section">교차로 상세 통계</div>
+              <div class="section">교차로 상세 통계</div>
             </div>
             <!-- //breadcrumb -->
             <div class="main-stats-container">
