--- a/base/html/index.html
+++ b/base/html/index.html
@@ -1666,6 +1666,20 @@
                           <td class="col-num"><!--자동입력--></td>
                           <td class="col-1depth"></td>
                           <td class="col-2depth"></td>
+                          <td class="col-3depth">교차로 비교 통계<br />(차트2개일경우)</td>
+                          <td class="col-4depth"></td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/crossroads_stats_comparison2.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
                           <td class="col-3depth"></td>
                           <td class="col-4depth">비교 지점 선택</td>
                           <td class="col-5depth"></td>
