--- a/base/html/map_crossroad_view2.html
+++ b/base/html/map_crossroad_view2.html
@@ -34,6 +34,57 @@
 
       <main class="ly-container">
         <div id="map1" class="ly-map">
+          <!-- 지도 타입 선택 -->
+          <div class="map-type">
+            <label>
+              <input type="radio" checked name="maptype" />
+              <span>일반지도</span>
+            </label>
+            <label>
+              <input type="radio" name="maptype" />
+              <span>위성지도</span>
+            </label>
+          </div>
+          <!-- //지도 타입 선택 -->
+
+          <div class="map-state-legend-container">
+            <ul class="map-state-toggle">
+              <li>
+                <label class="slider-switch">
+                  <input type="checkbox" />
+                  <i class="slider"></i>
+                </label>
+                <span>실시간 교통량</span>
+              </li>
+              <li>
+                <label class="slider-switch">
+                  <input type="checkbox" />
+                  <i class="slider"></i>
+                </label>
+                <span>접근로 별 LOS 등급</span>
+              </li>
+            </ul>
+            <!-- //map-state-toggle -->
+            <dl class="los-legend type2">
+              <dt>접근로 별 LOS 표준 범례</dt>
+              <dd>
+                <ul>
+                  <li class="lv-a">A등급</li>
+                  <li class="lv-b">B등급</li>
+                  <li class="lv-c">C등급</li>
+                  <li class="lv-d">D등급</li>
+                </ul>
+                <ul>
+                  <li class="lv-e">E등급</li>
+                  <li class="lv-f">F등급</li>
+                  <li class="lv-ff">FF등급</li>
+                  <li class="lv-fff">FFF등급</li>
+                </ul>
+              </dd>
+            </dl>
+          </div>
+          <!-- //map-state-legend-container -->
+
           <!-- 영상 분할 화면 -->
           <section class="split-screen-container">
             <div class="split-screen">
