--- a/base/html/set_config_list.html
+++ b/base/html/set_config_list.html
@@ -26,7 +26,7 @@
               <i class="right angle icon divider"></i>
               <span class="section">설정</span>
               <i class="right angle icon divider"></i>
-              <div class="active section">환경 설정</div>
+              <div class="section">환경 설정</div>
             </div>
             <!-- //breadcrumb -->
 
