--- a/base/html/set_point.html
+++ b/base/html/set_point.html
@@ -26,7 +26,7 @@
               <i class="right angle icon divider"></i>
               <span class="section">설정</span>
               <i class="right angle icon divider"></i>
-              <div class="active section">지점 설정</div>
+              <div class="section">지점 설정</div>
             </div>
             <!-- //breadcrumb -->
 
