--- a/base/html/sw_list.html
+++ b/base/html/sw_list.html
@@ -28,7 +28,7 @@
               <i class="right angle icon divider"></i>
               <div class="section">시스템 관리</div>
               <i class="right angle icon divider"></i>
-              <div class="active section">SW 연동 관리</div>
+              <div class="section">SW 연동 관리</div>
             </div>
             <!-- //breadcrumb -->
 
