--- a/base/html/crossroads_roi_set_list.html
+++ b/base/html/crossroads_roi_set_list.html
@@ -20,7 +20,8 @@
 
       <main class="ly-container">
         <div class="ly-sub">
-          <div class="ly-setting type2">
+          <!-- 231008 ly-setting 클래스명 옆에 type2 클래스명 삭제 -->
+          <div class="ly-setting">
             <div class="ui breadcrumb">
               <i class="home icon"></i>
               <i class="right angle icon divider"></i>
