--- a/base/html/map_crossroad_view.html
+++ b/base/html/map_crossroad_view.html
@@ -836,9 +836,261 @@
           </div>
           <!-- //modal -->
 
-          <!-- 차량 번호 인식 팝업 -->
-          <div id="carnum-1" class="car-num-recog-popup" hidden>작업중..</div>
-          <!-- //차량 번호 인식 팝업 -->
+          <!-- 231008 차량 번호 인식 팝업: active클래스 제거시 숨김 -->
+          <div class="car-num-recog-popup active" style="left: 1000px; top: 100px">
+            <header class="car-num-recog-popup-header">
+              <em class="tit">차량 번호 인식 - 서울과학예술영재학교방면</em>
+              <button type="button" class="btn-popup-close"><span class="screen-out">팝업 닫기</span></button>
+            </header>
+            <div class="car-num-recog-popup-content">
+              <div class="car-num-recog-popup-tab-group">
+                <a href="#car-num1" class="active">가산디지털 1로</a>
+                <a href="#car-num2">가산디지털 2로</a>
+              </div>
+              <!-- //car-num-recog-popup-tab-group -->
+              <div class="car-num-recog-popup-tab-content">
+                <ul id="car-num1" class="car-num-recog-list active">
+                  <li>
+                    <img src="/base/images/temp/number_plate.png" alt="차량 이미지" />
+                    <div class="car-num-tbl">
+                      <table>
+                        <colgroup>
+                          <col style="width: 40%" />
+                          <col style="width: 60%" />
+                        </colgroup>
+                        <tbody>
+                          <tr>
+                            <th>번호판</th>
+                            <td>000허 0000</td>
+                          </tr>
+                          <tr>
+                            <th>진행방면</th>
+                            <td>방향명</td>
+                          </tr>
+                          <tr>
+                            <th>진행차로</th>
+                            <td>1차로</td>
+                          </tr>
+                          <tr>
+                            <th>속도</th>
+                            <td>43km/h</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </li>
+                  <li>
+                    <img src="/base/images/temp/number_plate.png" alt="차량 이미지" />
+                    <div class="car-num-tbl">
+                      <table>
+                        <colgroup>
+                          <col style="width: 40%" />
+                          <col style="width: 60%" />
+                        </colgroup>
+                        <tbody>
+                          <tr>
+                            <th>번호판</th>
+                            <td>000허 0000</td>
+                          </tr>
+                          <tr>
+                            <th>진행방면</th>
+                            <td>방향명</td>
+                          </tr>
+                          <tr>
+                            <th>진행차로</th>
+                            <td>1차로</td>
+                          </tr>
+                          <tr>
+                            <th>속도</th>
+                            <td>43km/h</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </li>
+                  <li>
+                    <img src="/base/images/temp/number_plate.png" alt="차량 이미지" />
+                    <div class="car-num-tbl">
+                      <table>
+                        <colgroup>
+                          <col style="width: 40%" />
+                          <col style="width: 60%" />
+                        </colgroup>
+                        <tbody>
+                          <tr>
+                            <th>번호판</th>
+                            <td>000허 0000</td>
+                          </tr>
+                          <tr>
+                            <th>진행방면</th>
+                            <td>방향명</td>
+                          </tr>
+                          <tr>
+                            <th>진행차로</th>
+                            <td>1차로</td>
+                          </tr>
+                          <tr>
+                            <th>속도</th>
+                            <td>43km/h</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </li>
+                  <li>
+                    <img src="/base/images/temp/number_plate.png" alt="차량 이미지" />
+                    <div class="car-num-tbl">
+                      <table>
+                        <colgroup>
+                          <col style="width: 40%" />
+                          <col style="width: 60%" />
+                        </colgroup>
+                        <tbody>
+                          <tr>
+                            <th>번호판</th>
+                            <td>000허 0000</td>
+                          </tr>
+                          <tr>
+                            <th>진행방면</th>
+                            <td>방향명</td>
+                          </tr>
+                          <tr>
+                            <th>진행차로</th>
+                            <td>1차로</td>
+                          </tr>
+                          <tr>
+                            <th>속도</th>
+                            <td>43km/h</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </li>
+                </ul>
+                <ul id="car-num2" class="car-num-recog-list">
+                  <li>
+                    <img src="/base/images/temp/number_plate.png" alt="차량 이미지" />
+                    <div class="car-num-tbl">
+                      <table>
+                        <colgroup>
+                          <col style="width: 40%" />
+                          <col style="width: 60%" />
+                        </colgroup>
+                        <tbody>
+                          <tr>
+                            <th>번호판</th>
+                            <td>123하 0000</td>
+                          </tr>
+                          <tr>
+                            <th>진행방면</th>
+                            <td>방향명</td>
+                          </tr>
+                          <tr>
+                            <th>진행차로</th>
+                            <td>1차로</td>
+                          </tr>
+                          <tr>
+                            <th>속도</th>
+                            <td>43km/h</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </li>
+                  <li>
+                    <img src="/base/images/temp/number_plate.png" alt="차량 이미지" />
+                    <div class="car-num-tbl">
+                      <table>
+                        <colgroup>
+                          <col style="width: 40%" />
+                          <col style="width: 60%" />
+                        </colgroup>
+                        <tbody>
+                          <tr>
+                            <th>번호판</th>
+                            <td>123하 0000</td>
+                          </tr>
+                          <tr>
+                            <th>진행방면</th>
+                            <td>방향명</td>
+                          </tr>
+                          <tr>
+                            <th>진행차로</th>
+                            <td>1차로</td>
+                          </tr>
+                          <tr>
+                            <th>속도</th>
+                            <td>43km/h</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </li>
+                  <li>
+                    <img src="/base/images/temp/number_plate.png" alt="차량 이미지" />
+                    <div class="car-num-tbl">
+                      <table>
+                        <colgroup>
+                          <col style="width: 40%" />
+                          <col style="width: 60%" />
+                        </colgroup>
+                        <tbody>
+                          <tr>
+                            <th>번호판</th>
+                            <td>123하 0000</td>
+                          </tr>
+                          <tr>
+                            <th>진행방면</th>
+                            <td>방향명</td>
+                          </tr>
+                          <tr>
+                            <th>진행차로</th>
+                            <td>1차로</td>
+                          </tr>
+                          <tr>
+                            <th>속도</th>
+                            <td>43km/h</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </li>
+                  <li>
+                    <img src="/base/images/temp/number_plate.png" alt="차량 이미지" />
+                    <div class="car-num-tbl">
+                      <table>
+                        <colgroup>
+                          <col style="width: 40%" />
+                          <col style="width: 60%" />
+                        </colgroup>
+                        <tbody>
+                          <tr>
+                            <th>번호판</th>
+                            <td>123하 0000</td>
+                          </tr>
+                          <tr>
+                            <th>진행방면</th>
+                            <td>방향명</td>
+                          </tr>
+                          <tr>
+                            <th>진행차로</th>
+                            <td>1차로</td>
+                          </tr>
+                          <tr>
+                            <th>속도</th>
+                            <td>43km/h</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <!-- //car-num-recog-popup-tab-content -->
+            </div>
+            <!-- //car-num-recog-popup-content -->
+          </div>
+          <!-- //car-num-recog-popup -->
         </div>
         <!-- //ly-map -->
       </main>
@@ -853,6 +1105,17 @@
       window.onload = function () {
         var map1 = new ngii_wmts.map('map1', { zoom: 6 });
       };
+
+      // 231008 차량 번호 인식 팝업 탭 메뉴
+      $(document).on('click', '.car-num-recog-popup-tab-group a', function (e) {
+        e.preventDefault();
+        var $this = $(this);
+        var $hash = $this.attr('href');
+        $('.car-num-recog-popup-tab-group a').removeClass('active');
+        $('.car-num-recog-list').removeClass('active');
+        $this.addClass('active');
+        $($hash).addClass('active');
+      });
 
       // 탭 퍼블리싱 확인용
       $('.crossroad-view-container .menu .item').tab();
