1. 팝업 설명칸 문자가 긴 경우 레이아웃 깨지는 현상 수정(css 수정) 2. 카메라 활성화된 아이콘 교체 3. (공통) 목록 화면의 데이터 개수가 12개 미만일 경우 스크롤 안보이게    수정 4. signal_info_list.html 수정 (231010 날짜 주석 참고)

--- a/base/html/index.html
+++ b/base/html/index.html
@@ -145,8 +145,8 @@
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
-                        <tr>
-                          <td class="col-num"><!--자동입력--></td>
+                        <!-- <tr>
+                          <td class="col-num"></td>
                           <td class="col-1depth">에러페이지</td>
                           <td class="col-2depth"></td>
                           <td class="col-3depth"></td>
@@ -154,11 +154,11 @@
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/common/error.html</td>
-                          <!-- <td class="col-date"></td> -->
+                          <td class="col-date"></td>
                           <td class="col-complete" data-complete=""></td>
-                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-worker"></td>
                           <td class="col-memo"></td>
-                        </tr>
+                        </tr> -->
                         <!-- <tr>
                         <td class="col-num"></td>
                         <td class="col-1depth">아이콘 모음</td>
@@ -343,7 +343,7 @@
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/map_main.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo">
                             <ul style="font-weight: bold">
@@ -366,7 +366,7 @@
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/map_main2.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo">
                             <ul style="font-weight: bold">
@@ -386,7 +386,7 @@
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/map_crossroad_view.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
