--- a/base/html/signal_info_list.html
+++ b/base/html/signal_info_list.html
@@ -73,7 +73,8 @@
             <!-- //button-function-group -->
 
             <div class="data-tbl-very">
-              <table class="ui very basic table is-fncbtn">
+              <!-- 231010 is-fncbtn2로 클래스명 변경 -->
+              <table class="ui very basic table is-fncbtn2">
                 <colgroup>
                   <col style="width: 72px" />
                   <col style="width: 56px" />
