--- a/base/html/index.html
+++ b/base/html/index.html
@@ -1212,7 +1212,11 @@
                           <!-- <td class="col-date"></td> -->
                           <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
-                          <td class="col-memo"></td>
+                          <td class="col-memo">
+                            <ul style="font-weight: bold">
+                              <li>- 지도 위에 노출되는 팝업 CASE 참고</li>
+                            </ul>
+                          </td>
                         </tr>
                         <tr>
                           <td class="col-num"><!--자동입력--></td>
@@ -1226,7 +1230,11 @@
                           <!-- <td class="col-date"></td> -->
                           <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
-                          <td class="col-memo"></td>
+                          <td class="col-memo">
+                            <ul style="font-weight: bold">
+                              <li>- 지도 위에 노출되는 팝업 CASE 참고</li>
+                            </ul>
+                          </td>
                         </tr>
                         <tr>
                           <td class="col-num"><!--자동입력--></td>
@@ -1240,7 +1248,11 @@
                           <!-- <td class="col-date"></td> -->
                           <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
-                          <td class="col-memo"></td>
+                          <td class="col-memo">
+                            <ul style="font-weight: bold">
+                              <li>- 지도 위에 노출되는 팝업 CASE 참고</li>
+                            </ul>
+                          </td>
                         </tr>
                         <tr>
                           <td class="col-num"><!--자동입력--></td>
