--- a/base/html/map_crossroad_view3.html
+++ b/base/html/map_crossroad_view3.html
@@ -37,10 +37,10 @@
           <!-- 영상 분할 화면 -->
           <section class="split-screen-container type2">
             <div class="split-screen">
-              <span class="split-screen-info">
+              <!-- <span class="split-screen-info">
                 <i>채널1</i>
                 <em>천안동남카메라1</em>
-              </span>
+              </span> -->
               <video autoplay loop muted width="100%" height="100%" poster="/base/images/cannot_connection.png" class="split-video">
                 <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
               </video>
@@ -51,10 +51,10 @@
             </div>
             <!-- //split-screen -->
             <div class="split-screen">
-              <span class="split-screen-info">
+              <!-- <span class="split-screen-info">
                 <i>채널3</i>
                 <em>천안동남카메라3</em>
-              </span>
+              </span> -->
               <video autoplay loop muted width="100%" height="100%" poster="/base/images/cannot_connection.png" class="split-video">
                 <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
               </video>
@@ -65,10 +65,10 @@
             </div>
             <!-- //split-screen -->
             <div class="split-screen">
-              <span class="split-screen-info">
+              <!-- <span class="split-screen-info">
                 <i>채널5</i>
                 <em>천안동남카메라5</em>
-              </span>
+              </span> -->
               <video autoplay loop muted width="100%" height="100%" poster="/base/images/cannot_connection.png" class="split-video">
                 <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
               </video>
@@ -79,10 +79,10 @@
             </div>
             <!-- //split-screen -->
             <div class="split-screen">
-              <span class="split-screen-info">
+              <!-- <span class="split-screen-info">
                 <i>채널7</i>
                 <em>천안동남카메라7</em>
-              </span>
+              </span> -->
               <video autoplay loop muted width="100%" height="100%" poster="/base/images/cannot_connection.png" class="split-video">
                 <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
               </video>
@@ -93,10 +93,10 @@
             </div>
             <!-- //split-screen -->
             <div class="split-screen">
-              <span class="split-screen-info">
+              <!-- <span class="split-screen-info">
                 <i>채널9</i>
                 <em>천안동남카메라9</em>
-              </span>
+              </span> -->
               <video autoplay loop muted width="100%" height="100%" poster="/base/images/cannot_connection.png" class="split-video">
                 <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
               </video>
