--- a/base/html/crossroads_roi_set_list.html
+++ b/base/html/crossroads_roi_set_list.html
@@ -62,12 +62,13 @@
 
             <div class="data-tbl-very">
               <table class="ui very basic table is-fncbtn">
+                <!-- 231015 col 너비값 수정 -->
                 <colgroup>
                   <col style="width: 56px" />
+                  <col style="width: 150px" />
                   <col />
-                  <col />
-                  <col />
-                  <col />
+                  <col style="width: 150px" />
+                  <col style="width: 500px" />
                   <col />
                   <col />
                   <col />
@@ -98,7 +99,11 @@
                     <td>태릉</td>
                     <td>1001</td>
                     <td>태릉입구역</td>
-                    <td>CAM1</td>
+                    <td>
+                      데이터 영역이 길 경우 테스트데이터 영역이 길 경우 테스트데이터 영역이 길 경우 테스트데이터 영역이 길 경우 테스트데이터 영역이 길
+                      경우 테스트데이터 영역이 길 경우 테스트데이터 영역이 길 경우 테스트데이터 영역이 길 경우 테스트데이터 영역이 길 경우
+                      테스트데이터 영역이 길 경우 테스트
+                    </td>
                     <td>1</td>
                     <td>북</td>
                     <td>설정</td>
