--- a/base/html/crossroads_roi_set_tab.html
+++ b/base/html/crossroads_roi_set_tab.html
@@ -190,7 +190,7 @@
             <!-- //roi-set-area-button-group -->
 
             <!-- Gradient 버튼 비활성화: disabled 속성 추가 -->
-            <button type="button" class="roi-set-one-btn" disabled>Gradient</button>
+            <!-- <button type="button" class="roi-set-one-btn" disabled>Gradient</button> -->
 
             <div class="perceive-body">
               <table>
@@ -248,14 +248,14 @@
                       </div>
                     </td>
                   </tr>
-                  <tr>
+                  <!-- <tr>
                     <th>돌발 진행 방향</th>
                     <td>
                       <div class="ui input rounded center xs">
                         <input type="text" disabled />
                       </div>
                     </td>
-                  </tr>
+                  </tr> -->
                 </tbody>
               </table>
             </div>
@@ -299,7 +299,7 @@
                     <th>거리<br />(m)</th>
                     <th>시간</th>
                     <th>거리<br />(Pixel)</th>
-                    <th>Gradi<br />ent</th>
+                    <th>방향</th>
                     <th>색상</th>
                     <th>삭제</th>
                   </tr>
@@ -312,7 +312,9 @@
                     <td>5</td>
                     <td></td>
                     <td></td>
-                    <td></td>
+                    <td>
+                      <a href="#" class="btn-small">방향설정</a>
+                    </td>
                     <td><i class="color-yellow"></i></td>
                     <td>
                       <button type="button" class="ico-wastebasket"><span class="screen-out">삭제 버튼</span></button>
@@ -325,7 +327,7 @@
                     <td>5</td>
                     <td>30</td>
                     <td></td>
-                    <td></td>
+                    <td>30</td>
                     <td><i class="color-red"></i></td>
                     <td>
                       <button type="button" class="ico-wastebasket"><span class="screen-out">삭제 버튼</span></button>
@@ -338,7 +340,7 @@
                     <td>5</td>
                     <td>30</td>
                     <td>30</td>
-                    <td></td>
+                    <td>30</td>
                     <td><i class="color-orange"></i></td>
                     <td>
                       <button type="button" class="ico-wastebasket"><span class="screen-out">삭제 버튼</span></button>
